--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.pixelbin.io/v2/lingering-thunder-71cc8f/original/presolv/logo.1326f5cba41d9c4e5917.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Scheduler - Presolve360</title>
   </head>
   <body>
     <div id="root"></div>
